# AnimeParser

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  self.html  test.html
aniboom/: __init__.py  pagination.py  parser.py  player.py
aniboom_async/: __init__.py  models.py  pagination.py
animego/aniboom/: __init__.py  mpd.py  pagination.py  player.py
animego/aniboom_async/: __init__.py  pagination.py  player.py
animego/core/: abstract.py
animego/models/: __init__.py
animego/parser/: anime_parser.py  page_parser.py  player_parser.py
core/: models.py  pagination.py  parsers.py
exceptions/: __init__.py  utils.py
src/anigo/: __init__.py
src/anigo/animego/: __init__.py
src/anigo/animego/aniboom/: __init__.py  mpd.py  pagination.py
src/anigo/animego/aniboom_async/: __init__.py  mpd.py  pagination.py
src/anigo/animego/core/: abstract.py
src/anigo/animego/cvh/: __init__.py
src/anigo/animego/models/: __init__.py
src/anigo/animego/parser/: anime_parser.py  mpd_parser.py  page_parser.py  player_parser.py
src/anigo/exceptions/: __init__.py  utils.py
src/anime_parser/: __init__.py
src/anime_parser/animego/: __init__.py
src/anime_parser/animego/aniboom_async/: mpd.py
src/anime_parser/animego/parser/: __init__.py
src/animego/aniboom/: mpd.py
src/animego/aniboom_async/: __init__.py
src/animego/core/: abstract.py
src/animego/models/: __init__.py
src/animego/parser/: mpd_parser.py
src/core/: pagination.py
tests/: aniboom_test.py  conftest.py
