[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animeparser"
version = "0.1.0"
authors = [
    {name = "AlbertPy", email = "alikegorplay@gmail.com"},
]
description = "Parser for anime sites"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "httpx>=0.28.0",
    "beautifulsoup4>=4.14.0", 
    "lxml>=6.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.14.0",
    "colorama>=0.4.0",
    "Pygments>=2.19.0",
]

[project.scripts]
animeparser = "animeparser.cli:main"